hphp/hack/test/typecheck/question_colon.php.exp
File "question_colon.php", line 14, characters 16-40:
An Elvis operator `?:` is expected here. (Parsing[1002])
